infrastructure/external-secrets/external-secrets-networkpolicy.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: external-secrets-ingress-egress
  namespace: external-secrets
spec:
  endpointSelector: {}
  egress:
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: openbao
            app.kubernetes.io/name: openbao
      toPorts:
        - ports:
            - port: "8200"
              protocol: TCP
  ingress:
    - fromEntities:
        - kube-apiserver
      toPorts:
        - ports:
            - port: "10250"
              protocol: TCP
